--- a/UI/Makefile
+++ b/UI/Makefile
@@ -1,2 +1,4 @@
 main:
 	corebuild -pkgs lwt,core,Str,ANSIterminal interface.byte
+server:
+	corebuild -pkgs lwt,lwt.unix,core,Str,ANSIterminal chat_serv_test.byte
